Add missing include

45e65f302b663b2c6ab69df06d3b6f219c1797b2 made
ruby/internal/intern/thread.h depend on rb_wait_for_single_fd, which is
declared in ruby/io.h. However, it cannot include ruby/io.h directly due
to circular dependency issues.  So add an ruby/internal/deprecated_io.h
file with rb_wait_for_single_fd and a couple similar functions, and
have both ruby/io.h and ruby/internal/intern/thread.h include it.

Fixes [Bug #18046]